@@ -14,6 +14,9 @@
 	throughput due to loading entire cache lines at a time rather than
 	single column vector entries.)
 
+	add options for reading x and y vectors from file, and use
+	standard output for printing results.
+
 2022-08-29 Sergej Breiter <breiter@nm.ifi.lmu.de>
 
         Add A64FX cache partitioning directives for Fujitsu C compiler.
